tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/bool_and_int_add.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(true + 1)

